// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconMenu rendering renders expected elements 1`] = `
<Layer>
  <IconButton
    aria-controls={null}
    aria-haspopup="true"
    className="IconMenu"
    disabled={false}
    icon={
      {
        "foo": "test",
      }
    }
    id="random-id"
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</Layer>
`;

exports[`IconMenu rendering renders expected elements when all items are disabled 1`] = `
<Layer>
  <IconButton
    aria-controls={null}
    aria-haspopup="true"
    className="IconMenu"
    disabled={true}
    icon={
      {
        "foo": "test",
      }
    }
    id="random-id"
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</Layer>
`;

exports[`IconMenu rendering renders expected elements when disabled is set 1`] = `
<Layer>
  <IconButton
    aria-controls={null}
    aria-haspopup="true"
    className="IconMenu"
    disabled={true}
    icon={
      {
        "foo": "test",
      }
    }
    id="random-id"
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</Layer>
`;

exports[`IconMenu rendering renders expected elements when expanded is true 1`] = `
<Layer>
  <IconButton
    aria-controls="random-id-menu"
    aria-expanded={true}
    aria-haspopup="true"
    className="IconMenu"
    disabled={false}
    icon={
      {
        "foo": "test",
      }
    }
    id="random-id"
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
  <React.Portal>
    <div
      className="IconMenu__wrapper"
    >
      <div
        tabIndex={0}
      />
      <ul
        aria-labelledby="random-id"
        className="IconMenu__menu"
        id="random-id-menu"
        role="menu"
      >
        <MenuItem
          data-index={0}
          id="random-id-0"
        >
          one
        </MenuItem>
        <MenuItem
          data-index={1}
          id="random-id-1"
        >
          two
        </MenuItem>
      </ul>
      <div
        tabIndex={0}
      />
    </div>
  </React.Portal>
</Layer>
`;

exports[`IconMenu rendering renders expected elements when optional properties are set 1`] = `
<Layer>
  <IconButton
    aria-controls={null}
    aria-haspopup="true"
    className="IconMenu TestClass"
    disabled={false}
    icon={
      {
        "foo": "test",
      }
    }
    id="random-id"
    overlay={
      <MenuArrow
        className="IconMenu__overlay"
      />
    }
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</Layer>
`;
